i40e/i40evf: VEB structure added, GTIME macro update (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15845,6 +15845,7 @@
 	patches.drivers/i40evf-0076-i40e-i40evf-remove-unused-RX_LRO-define.patch
 	patches.drivers/i40evf-0077-i40evf-set-descriptor-multiple-to-32.patch
 	patches.drivers/i40evf-0078-i40evf-fix-crash-when-changing-ring-sizes.patch
+	patches.drivers/i40evf-0079-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
 
 	########################################################
 	# Wireless Networking
