i40e/i40evf: remove chatty reset messages (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15857,6 +15857,7 @@
 	patches.drivers/i40evf-0088-i40evf-remove-bogus-comment.patch
 	patches.drivers/i40evf-0089-i40evf-clean-up-log-message-formatting.patch
 	patches.drivers/i40evf-0090-i40evf-use-correct-format-for-printing-MAC-addresses.patch
+	patches.drivers/i40evf-0091-i40e-i40evf-remove-chatty-reset-messages.patch
 
 	########################################################
 	# Wireless Networking
