i40evf: support ethtool RSS options (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15820,6 +15820,7 @@
 	patches.drivers/i40evf-0051-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
 	patches.drivers/i40evf-0052-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
 	patches.drivers/i40evf-0053-i40e-i40evf-update-AdminQ-API.patch
+	patches.drivers/i40evf-0054-i40evf-support-ethtool-RSS-options.patch
 
 	########################################################
 	# Wireless Networking
