i40evf: fix crash when changing ring sizes (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15844,6 +15844,7 @@
 	patches.drivers/i40evf-0075-i40evf-don-t-use-RESETTING-state-during-reinit.patch
 	patches.drivers/i40evf-0076-i40e-i40evf-remove-unused-RX_LRO-define.patch
 	patches.drivers/i40evf-0077-i40evf-set-descriptor-multiple-to-32.patch
+	patches.drivers/i40evf-0078-i40evf-fix-crash-when-changing-ring-sizes.patch
 
 	########################################################
 	# Wireless Networking
