i40evf: fix s390 build failure due to implicit prefetch.h (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15775,6 +15775,7 @@
 	patches.drivers/i40evf-0006-i40evf-init-code-and-hardware-support.patch
 	patches.drivers/i40evf-0007-i40evf-add-driver-to-kernel-build-system.patch
 	patches.drivers/i40evf-0008-i40evf-A0-silicon-specific.patch
+	patches.drivers/i40evf-0009-i40evf-fix-s390-build-failure-due-to-implicit-prefet.patch
 
 	########################################################
 	# Wireless Networking
