i40e/i40evf: i40e_register.h update (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15870,6 +15870,7 @@
 	patches.drivers/i40evf-0101-i40evf-check-admin-queue-error-bits.patch
 	patches.drivers/i40evf-0102-i40e-i40evf-remove-FTYPE.patch
 	patches.drivers/i40evf-0103-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
+	patches.drivers/i40evf-0104-i40e-i40evf-i40e_register.h-update.patch
 
 	########################################################
 	# Wireless Networking
