--- a/series.conf
+++ b/series.conf
@@ -15768,6 +15768,7 @@
 
 	# i40evf SP4 update (bsc#909486 FATE#317393)
 	patches.drivers/i40evf-0001-i40evf-main-driver-core.patch
+	patches.drivers/i40evf-0002-i40evf-transmit-and-receive-functionality.patch
 
 	########################################################
 	# Wireless Networking
