net: get rid of SET_ETHTOOL_OPS (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15825,6 +15825,7 @@
 	patches.drivers/i40evf-0056-i40evf-fix-panic-on-PF-driver-fail.patch
 	patches.drivers/i40evf-0057-i40evf-remove-debugging-message.patch
 	patches.drivers/i40evf-0058-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
+	patches.drivers/i40evf-0059-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
