--- a/series.conf
+++ b/series.conf
@@ -15891,6 +15891,7 @@
 	patches.drivers/i40evf-0122-i40evf-don-t-violate-scope.patch
 	patches.drivers/i40evf-0123-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
 	patches.drivers/i40evf-0124-i40evf-invite-vector-0-to-the-interrupt-party.patch
+	patches.drivers/i40evf-0125-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
 
 	########################################################
 	# Wireless Networking
