--- a/series.conf
+++ b/series.conf
@@ -15884,6 +15884,7 @@
 	patches.drivers/i40evf-0115-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
 	patches.drivers/i40evf-0116-i40e-i40evf-clear-aq-bah-bal-on-shutdown.patch
 	patches.drivers/i40evf-0117-i40evf-set-flags-before-sending-message.patch
+	patches.drivers/i40evf-0118-i40e-i40evf-add-ASQ-write-back-timeout-variable-to-A.patch
 
 	########################################################
 	# Wireless Networking
