--- a/series.conf
+++ b/series.conf
@@ -15871,6 +15871,7 @@
 	patches.drivers/i40evf-0102-i40e-i40evf-remove-FTYPE.patch
 	patches.drivers/i40evf-0103-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
 	patches.drivers/i40evf-0104-i40e-i40evf-i40e_register.h-update.patch
+	patches.drivers/i40evf-0105-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
 
 	########################################################
 	# Wireless Networking
