i40evf: remove bogus comment (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15790,6 +15790,7 @@
 	patches.drivers/i40evf-0021-i40evf-fix-multiple-crashes-on-remove.patch
 	patches.drivers/i40evf-0022-i40evf-get-rid-of-pci_using_dac.patch
 	patches.drivers/i40evf-0023-i40evf-fix-up-strings-in-init-task.patch
+	patches.drivers/i40evf-0024-i40evf-remove-bogus-comment.patch
 
 	########################################################
 	# Wireless Networking
