i40evf: main driver core (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15766,6 +15766,9 @@
 	patches.drivers/i40e-0473-i40e-igb-Convert-to-dev_consume_skb_any.patch
 	patches.drivers/i40e-0474-i40e-_MASK-vs-_SHIFT-typo-in-i40e_handle_mdd_event.patch
 
+	# i40evf SP4 update (bsc#909486 FATE#317393)
+	patches.drivers/i40evf-0001-i40evf-main-driver-core.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
