i40evf: fix off-by-one (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15872,6 +15872,7 @@
 	patches.drivers/i40evf-0103-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
 	patches.drivers/i40evf-0104-i40e-i40evf-i40e_register.h-update.patch
 	patches.drivers/i40evf-0105-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
+	patches.drivers/i40evf-0106-i40evf-fix-off-by-one.patch
 
 	########################################################
 	# Wireless Networking
