i40e/i40evf: User ether_addr_copy instead of memcpy (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15866,6 +15866,7 @@
 	patches.drivers/i40evf-0097-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
 	patches.drivers/i40evf-0098-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
 	patches.drivers/i40evf-0099-i40evf-don-t-go-further-down.patch
+	patches.drivers/i40evf-0100-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
 
 	########################################################
 	# Wireless Networking
