i40evf: clean up log message formatting (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15855,6 +15855,7 @@
 	patches.drivers/i40evf-0086-i40e-i40evf-Clean-up-a-few-things.patch
 	patches.drivers/i40evf-0087-i40evf-remove-unnecessary-log-messages.patch
 	patches.drivers/i40evf-0088-i40evf-remove-bogus-comment.patch
+	patches.drivers/i40evf-0089-i40evf-clean-up-log-message-formatting.patch
 
 	########################################################
 	# Wireless Networking
