--- a/series.conf
+++ b/series.conf
@@ -15867,6 +15867,7 @@
 	patches.drivers/i40evf-0098-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
 	patches.drivers/i40evf-0099-i40evf-don-t-go-further-down.patch
 	patches.drivers/i40evf-0100-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
+	patches.drivers/i40evf-0101-i40evf-check-admin-queue-error-bits.patch
 
 	########################################################
 	# Wireless Networking
