net: i40evf: Remove duplicate include (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15784,6 +15784,7 @@
 	patches.drivers/i40evf-0015-i40evf-don-t-store-unnecessary-array-of-strings.patch
 	patches.drivers/i40evf-0016-i40evf-change-type-of-flags-variable.patch
 	patches.drivers/i40evf-0017-i40evf-refactor-reset-handling.patch
+	patches.drivers/i40evf-0018-net-i40evf-Remove-duplicate-include.patch
 
 	########################################################
 	# Wireless Networking
