i40e,igb,ixgbe: remove usless return statements (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15835,6 +15835,7 @@
 	patches.drivers/i40evf-0066-i40e-i40evf-set-proper-default-for-ITR-registers.patch
 	patches.drivers/i40evf-0067-i40e-i40evf-control-auto-ITR-through-ethtool.patch
 	patches.drivers/i40evf-0068-i40evf-Use-pci_enable_msix_range-instead-of-pci_enab.patch
+	patches.drivers/i40evf-0069-i40e-igb-ixgbe-remove-usless-return-statements.patch
 
 	########################################################
 	# Wireless Networking
