i40evf: add driver to kernel build system (bsc#909486 FATE#317393).
Update config files.
Add support Intel(R) XL710 X710 Virtual Function Ethernet support (I40EVF).

--- a/series.conf
+++ b/series.conf
@@ -15773,6 +15773,7 @@
 	patches.drivers/i40evf-0004-i40evf-virtual-channel-interface.patch
 	patches.drivers/i40evf-0005-i40evf-driver-core-headers.patch
 	patches.drivers/i40evf-0006-i40evf-init-code-and-hardware-support.patch
+	patches.drivers/i40evf-0007-i40evf-add-driver-to-kernel-build-system.patch
 
 	########################################################
 	# Wireless Networking
