i40evf: change type of flags variable (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15782,6 +15782,7 @@
 	patches.drivers/i40evf-0013-i40evf-clean-up-adapter-struct.patch
 	patches.drivers/i40evf-0014-i40evf-fix-bogus-comment.patch
 	patches.drivers/i40evf-0015-i40evf-don-t-store-unnecessary-array-of-strings.patch
+	patches.drivers/i40evf-0016-i40evf-change-type-of-flags-variable.patch
 
 	########################################################
 	# Wireless Networking
