i40e/i40evf: remove FTYPE (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15868,6 +15868,7 @@
 	patches.drivers/i40evf-0099-i40evf-don-t-go-further-down.patch
 	patches.drivers/i40evf-0100-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
 	patches.drivers/i40evf-0101-i40evf-check-admin-queue-error-bits.patch
+	patches.drivers/i40evf-0102-i40e-i40evf-remove-FTYPE.patch
 
 	########################################################
 	# Wireless Networking
