i40evf: Update AdminQ interface (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15826,6 +15826,7 @@
 	patches.drivers/i40evf-0057-i40evf-remove-debugging-message.patch
 	patches.drivers/i40evf-0058-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
 	patches.drivers/i40evf-0059-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/i40evf-0060-i40evf-Update-AdminQ-interface.patch
 
 	########################################################
 	# Wireless Networking
