--- a/series.conf
+++ b/series.conf
@@ -15789,6 +15789,7 @@
 	patches.drivers/i40evf-0020-i40evf-remove-VLAN-filters-on-close.patch
 	patches.drivers/i40evf-0021-i40evf-fix-multiple-crashes-on-remove.patch
 	patches.drivers/i40evf-0022-i40evf-get-rid-of-pci_using_dac.patch
+	patches.drivers/i40evf-0023-i40evf-fix-up-strings-in-init-task.patch
 
 	########################################################
 	# Wireless Networking
