i40evf: Rename i40e_ptype_lookup i40evf_ptype_lookup (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15802,6 +15802,7 @@
 	patches.drivers/i40evf-0033-i40e-i40evf-Some-flow-director-HW-definition-fixes.patch
 	patches.drivers/i40evf-0034-i40e-i40evf-Use-correct-number-of-VF-vectors.patch
 	patches.drivers/i40evf-0035-i40e-i40evf-Use-dma_set_mask_and_coherent.patch
+	patches.drivers/i40evf-0036-i40evf-Rename-i40e_ptype_lookup-i40evf_ptype_lookup.patch
 
 	########################################################
 	# Wireless Networking
