--- a/series.conf
+++ b/series.conf
@@ -15861,6 +15861,7 @@
 	patches.drivers/i40evf-0092-i40e-i40evf-fix-TSO-accounting.patch
 	patches.drivers/i40evf-0093-i40e-i40evf-fix-poll-weight.patch
 	patches.drivers/i40evf-0094-i40e-i40evf-remove-deprecated-device-IDs.patch
+	patches.drivers/i40evf-0095-i40evf-Fix-function-header.patch
 
 	########################################################
 	# Wireless Networking
