--- a/series.conf
+++ b/series.conf
@@ -15817,6 +15817,7 @@
 	patches.drivers/i40evf-0048-i40e-i40evf-Remove-addressof-casts-to-same-type.patch
 	patches.drivers/i40evf-0049-i40evf-remove-open-coded-skb_cow_head.patch
 	patches.drivers/i40evf-0050-i40evf-program-RSS-LUT-correctly.patch
+	patches.drivers/i40evf-0051-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
 
 	########################################################
 	# Wireless Networking
