i40evf: fix oops in watchdog handler (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15810,6 +15810,7 @@
 	patches.drivers/i40evf-0041-i40e-i40evf-Add-EEE-LPI-stats.patch
 	patches.drivers/i40evf-0042-i40evf-don-t-shut-down-admin-queue-on-error.patch
 	patches.drivers/i40evf-0043-i40evf-clean-up-init-error-messages.patch
+	patches.drivers/i40evf-0044-i40evf-fix-oops-in-watchdog-handler.patch
 
 	########################################################
 	# Wireless Networking
