--- a/series.conf
+++ b/series.conf
@@ -15837,6 +15837,7 @@
 	patches.drivers/i40evf-0068-i40evf-Use-pci_enable_msix_range-instead-of-pci_enab.patch
 	patches.drivers/i40evf-0069-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/i40evf-0070-i40evf-Use-is_multicast_ether_addr-helper.patch
+	patches.drivers/i40evf-0071-i40e-i40evf-Update-check-for-AQ-aliveness.patch
 
 	########################################################
 	# Wireless Networking
