i40e/i40evf: Add an FD message level (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15812,6 +15812,7 @@
 	patches.drivers/i40evf-0043-i40evf-clean-up-init-error-messages.patch
 	patches.drivers/i40evf-0044-i40evf-fix-oops-in-watchdog-handler.patch
 	patches.drivers/i40evf-0045-i40evf-remove-double-space-after-return.patch
+	patches.drivers/i40evf-0046-i40e-i40evf-Add-an-FD-message-level.patch
 
 	########################################################
 	# Wireless Networking
