i40e: spelling error (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15777,6 +15777,7 @@
 	patches.drivers/i40evf-0008-i40evf-A0-silicon-specific.patch
 	patches.drivers/i40evf-0009-i40evf-fix-s390-build-failure-due-to-implicit-prefet.patch
 	patches.drivers/i40evf-0010-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
+	patches.drivers/i40evf-0011-i40e-spelling-error.patch
 
 	########################################################
 	# Wireless Networking
