--- a/series.conf
+++ b/series.conf
@@ -15859,6 +15859,7 @@
 	patches.drivers/i40evf-0090-i40evf-use-correct-format-for-printing-MAC-addresses.patch
 	patches.drivers/i40evf-0091-i40e-i40evf-remove-chatty-reset-messages.patch
 	patches.drivers/i40evf-0092-i40e-i40evf-fix-TSO-accounting.patch
+	patches.drivers/i40evf-0093-i40e-i40evf-fix-poll-weight.patch
 
 	########################################################
 	# Wireless Networking
