i40e/i40evf: Add set_fc and init of FC settings (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15892,6 +15892,7 @@
 	patches.drivers/i40evf-0123-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
 	patches.drivers/i40evf-0124-i40evf-invite-vector-0-to-the-interrupt-party.patch
 	patches.drivers/i40evf-0125-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
+	patches.drivers/i40evf-0126-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
 
 	########################################################
 	# Wireless Networking
