i40evf: future-proof vfr_stat state check (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15901,6 +15901,7 @@
 	patches.drivers/i40evf-0132-i40e-i40evf-ARQ-copy-desc-data-even-for-failed-comma.patch
 	patches.drivers/i40evf-0133-i40e-always-print-aqtx-answer.patch
 	patches.drivers/i40evf-0134-i40evf-fix-scan-warning-on-sprintf.patch
+	patches.drivers/i40evf-0135-i40evf-future-proof-vfr_stat-state-check.patch
 
 	########################################################
 	# Wireless Networking
