--- a/series.conf
+++ b/series.conf
@@ -15824,6 +15824,7 @@
 	patches.drivers/i40evf-0055-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
 	patches.drivers/i40evf-0056-i40evf-fix-panic-on-PF-driver-fail.patch
 	patches.drivers/i40evf-0057-i40evf-remove-debugging-message.patch
+	patches.drivers/i40evf-0058-i40e-i40evf-Retrieve-and-store-missing-link-config-i.patch
 
 	########################################################
 	# Wireless Networking
