--- a/series.conf
+++ b/series.conf
@@ -15905,6 +15905,7 @@
 	patches.drivers/i40evf-0136-i40evf-do-not-re-arm-watchdog-after-remove.patch
 	patches.drivers/i40evf-0137-i40evf-don-t-leak-queue-vectors.patch
 	patches.drivers/i40evf-0138-i40evf-fix-memory-leak-on-unused-interfaces.patch
+	patches.drivers/i40evf-0139-i40evf-Fixed-guest-OS-panic-when-removing-vf-driver.patch
 
 	########################################################
 	# Wireless Networking
