i40evf: remove errant space (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15794,6 +15794,7 @@
 	patches.drivers/i40evf-0025-i40evf-don-t-guess-device-name.patch
 	patches.drivers/i40evf-0026-i40evf-store-ring-size-in-ring-structs.patch
 	patches.drivers/i40evf-0027-i40evf-update-version-and-copyright-date.patch
+	patches.drivers/i40evf-0028-i40evf-remove-errant-space.patch
 
 	########################################################
 	# Wireless Networking
