i40evf: remove bogus comment (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15854,6 +15854,7 @@
 	patches.drivers/i40evf-0085-i40e-i40evf-Fix-code-to-accommodate-i40e_register.h-.patch
 	patches.drivers/i40evf-0086-i40e-i40evf-Clean-up-a-few-things.patch
 	patches.drivers/i40evf-0087-i40evf-remove-unnecessary-log-messages.patch
+	patches.drivers/i40evf-0088-i40evf-remove-bogus-comment.patch
 
 	########################################################
 	# Wireless Networking
