--- a/series.conf
+++ b/series.conf
@@ -15829,6 +15829,7 @@
 	patches.drivers/i40evf-0060-i40evf-Update-AdminQ-interface.patch
 	patches.drivers/i40evf-0061-i40evf-Remove-unused-defines.patch
 	patches.drivers/i40evf-0062-i40evf-Fix-the-headers-and-update-copyright-year.patch
+	patches.drivers/i40evf-0063-i40evf-Use-macro-param-for-ethtool-stats.patch
 
 	########################################################
 	# Wireless Networking
