i40evf: core ethtool functionality (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15769,6 +15769,7 @@
 	# i40evf SP4 update (bsc#909486 FATE#317393)
 	patches.drivers/i40evf-0001-i40evf-main-driver-core.patch
 	patches.drivers/i40evf-0002-i40evf-transmit-and-receive-functionality.patch
+	patches.drivers/i40evf-0003-i40evf-core-ethtool-functionality.patch
 
 	########################################################
 	# Wireless Networking
