i40e/i40evf: Big endian fixes for handling HMC (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15876,6 +15876,7 @@
 	patches.drivers/i40evf-0107-i40e-i40evf-Update-RSS-configuration.patch
 	patches.drivers/i40evf-0108-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
 	patches.drivers/i40evf-0109-i40e-i40evf-remove-reserved-type.patch
+	patches.drivers/i40evf-0110-i40e-i40evf-Big-endian-fixes-for-handling-HMC.patch
 
 	########################################################
 	# Wireless Networking
