--- a/series.conf
+++ b/series.conf
@@ -15903,6 +15903,7 @@
 	patches.drivers/i40evf-0134-i40evf-fix-scan-warning-on-sprintf.patch
 	patches.drivers/i40evf-0135-i40evf-future-proof-vfr_stat-state-check.patch
 	patches.drivers/i40evf-0136-i40evf-do-not-re-arm-watchdog-after-remove.patch
+	patches.drivers/i40evf-0137-i40evf-don-t-leak-queue-vectors.patch
 
 	########################################################
 	# Wireless Networking
