i40evf: use min_t (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15804,6 +15804,7 @@
 	patches.drivers/i40evf-0035-i40e-i40evf-Use-dma_set_mask_and_coherent.patch
 	patches.drivers/i40evf-0036-i40evf-Rename-i40e_ptype_lookup-i40evf_ptype_lookup.patch
 	patches.drivers/i40evf-0037-i40evf-correctly-program-RSS-HLUT-table.patch
+	patches.drivers/i40evf-0038-i40evf-use-min_t.patch
 
 	########################################################
 	# Wireless Networking
