i40e/i40evf: add tracking to NVM busy state (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15818,6 +15818,7 @@
 	patches.drivers/i40evf-0049-i40evf-remove-open-coded-skb_cow_head.patch
 	patches.drivers/i40evf-0050-i40evf-program-RSS-LUT-correctly.patch
 	patches.drivers/i40evf-0051-i40e-i40evf-unhide-and-enable-to-one-prefena-field.patch
+	patches.drivers/i40evf-0052-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
 
 	########################################################
 	# Wireless Networking
