i40e/i40evf: Add base address registers to aq struct (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15881,6 +15881,7 @@
 	patches.drivers/i40evf-0112-i40evf-return-more-useful-error-information.patch
 	patches.drivers/i40evf-0113-i40evf-fix-typo.patch
 	patches.drivers/i40evf-0114-i40evf-resend-FW-request-if-no-response.patch
+	patches.drivers/i40evf-0115-i40e-i40evf-Add-base-address-registers-to-aq-struct.patch
 
 	########################################################
 	# Wireless Networking
