--- a/series.conf
+++ b/series.conf
@@ -15849,6 +15849,7 @@
 	patches.drivers/i40evf-0080-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
 	patches.drivers/i40evf-0081-i40evf-make-messages-less-dire.patch
 	patches.drivers/i40evf-0082-i40e-i40evf-check-AQ-register-for-valid-data.patch
+	patches.drivers/i40evf-0083-i40e-i40evf-add-Tx-pre-queue-disable-function.patch
 
 	########################################################
 	# Wireless Networking
