i40e/i40evf: check AQ register for valid data (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15848,6 +15848,7 @@
 	patches.drivers/i40evf-0079-i40e-i40evf-VEB-structure-added-GTIME-macro-update.patch
 	patches.drivers/i40evf-0080-i40e-i40evf-remove-rx_errors-and-rx_missed.patch
 	patches.drivers/i40evf-0081-i40evf-make-messages-less-dire.patch
+	patches.drivers/i40evf-0082-i40e-i40evf-check-AQ-register-for-valid-data.patch
 
 	########################################################
 	# Wireless Networking
