--- a/series.conf
+++ b/series.conf
@@ -15805,6 +15805,7 @@
 	patches.drivers/i40evf-0036-i40evf-Rename-i40e_ptype_lookup-i40evf_ptype_lookup.patch
 	patches.drivers/i40evf-0037-i40evf-correctly-program-RSS-HLUT-table.patch
 	patches.drivers/i40evf-0038-i40evf-use-min_t.patch
+	patches.drivers/i40evf-0039-i40e-i40evf-enable-hardware-feature-head-write-back.patch
 
 	########################################################
 	# Wireless Networking
