--- a/series.conf
+++ b/series.conf
@@ -15893,6 +15893,7 @@
 	patches.drivers/i40evf-0124-i40evf-invite-vector-0-to-the-interrupt-party.patch
 	patches.drivers/i40evf-0125-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
 	patches.drivers/i40evf-0126-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
+	patches.drivers/i40evf-0127-i40evf-remove-unnecessary-break-after-goto.patch
 
 	########################################################
 	# Wireless Networking
