i40e/i40evf: set headwb Tx context flags and use them (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15863,6 +15863,7 @@
 	patches.drivers/i40evf-0094-i40e-i40evf-remove-deprecated-device-IDs.patch
 	patches.drivers/i40evf-0095-i40evf-Fix-function-header.patch
 	patches.drivers/i40evf-0096-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
+	patches.drivers/i40evf-0097-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
 
 	########################################################
 	# Wireless Networking
