i40e/i40evf: fix error checking path (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15813,6 +15813,7 @@
 	patches.drivers/i40evf-0044-i40evf-fix-oops-in-watchdog-handler.patch
 	patches.drivers/i40evf-0045-i40evf-remove-double-space-after-return.patch
 	patches.drivers/i40evf-0046-i40e-i40evf-Add-an-FD-message-level.patch
+	patches.drivers/i40evf-0047-i40e-i40evf-fix-error-checking-path.patch
 
 	########################################################
 	# Wireless Networking
