i40e/i40evf: Clean up code (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15894,6 +15894,7 @@
 	patches.drivers/i40evf-0125-i40e-i40evf-Add-new-HW-link-info-variable-an_enabled.patch
 	patches.drivers/i40evf-0126-i40e-i40evf-Add-set_fc-and-init-of-FC-settings.patch
 	patches.drivers/i40evf-0127-i40evf-remove-unnecessary-break-after-goto.patch
+	patches.drivers/i40evf-0128-i40e-i40evf-Clean-up-code.patch
 
 	########################################################
 	# Wireless Networking
