i40evf: Use is_multicast_ether_addr helper (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15836,6 +15836,7 @@
 	patches.drivers/i40evf-0067-i40e-i40evf-control-auto-ITR-through-ethtool.patch
 	patches.drivers/i40evf-0068-i40evf-Use-pci_enable_msix_range-instead-of-pci_enab.patch
 	patches.drivers/i40evf-0069-i40e-igb-ixgbe-remove-usless-return-statements.patch
+	patches.drivers/i40evf-0070-i40evf-Use-is_multicast_ether_addr-helper.patch
 
 	########################################################
 	# Wireless Networking
