--- a/series.conf
+++ b/series.conf
@@ -15832,6 +15832,7 @@
 	patches.drivers/i40evf-0063-i40evf-Use-macro-param-for-ethtool-stats.patch
 	patches.drivers/i40evf-0064-i40evf-don-t-lie-to-ethtool.patch
 	patches.drivers/i40evf-0065-i40evf-make-ethtool_ops-const.patch
+	patches.drivers/i40evf-0066-i40e-i40evf-set-proper-default-for-ITR-registers.patch
 
 	########################################################
 	# Wireless Networking
