i40evf: request reset on tx hang (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15785,6 +15785,7 @@
 	patches.drivers/i40evf-0016-i40evf-change-type-of-flags-variable.patch
 	patches.drivers/i40evf-0017-i40evf-refactor-reset-handling.patch
 	patches.drivers/i40evf-0018-net-i40evf-Remove-duplicate-include.patch
+	patches.drivers/i40evf-0019-i40evf-request-reset-on-tx-hang.patch
 
 	########################################################
 	# Wireless Networking
