--- a/series.conf
+++ b/series.conf
@@ -15875,6 +15875,7 @@
 	patches.drivers/i40evf-0106-i40evf-fix-off-by-one.patch
 	patches.drivers/i40evf-0107-i40e-i40evf-Update-RSS-configuration.patch
 	patches.drivers/i40evf-0108-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
+	patches.drivers/i40evf-0109-i40e-i40evf-remove-reserved-type.patch
 
 	########################################################
 	# Wireless Networking
