--- a/series.conf
+++ b/series.conf
@@ -15860,6 +15860,7 @@
 	patches.drivers/i40evf-0091-i40e-i40evf-remove-chatty-reset-messages.patch
 	patches.drivers/i40evf-0092-i40e-i40evf-fix-TSO-accounting.patch
 	patches.drivers/i40evf-0093-i40e-i40evf-fix-poll-weight.patch
+	patches.drivers/i40evf-0094-i40e-i40evf-remove-deprecated-device-IDs.patch
 
 	########################################################
 	# Wireless Networking
