i40evf: don't stop watchdog if it hasn't started (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15877,6 +15877,7 @@
 	patches.drivers/i40evf-0108-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
 	patches.drivers/i40evf-0109-i40e-i40evf-remove-reserved-type.patch
 	patches.drivers/i40evf-0110-i40e-i40evf-Big-endian-fixes-for-handling-HMC.patch
+	patches.drivers/i40evf-0111-i40evf-don-t-stop-watchdog-if-it-hasn-t-started.patch
 
 	########################################################
 	# Wireless Networking
