i40e/i40evf: add driver version string to driver version command (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15821,6 +15821,7 @@
 	patches.drivers/i40evf-0052-i40e-i40evf-add-tracking-to-NVM-busy-state.patch
 	patches.drivers/i40evf-0053-i40e-i40evf-update-AdminQ-API.patch
 	patches.drivers/i40evf-0054-i40evf-support-ethtool-RSS-options.patch
+	patches.drivers/i40evf-0055-i40e-i40evf-add-driver-version-string-to-driver-vers.patch
 
 	########################################################
 	# Wireless Networking
