--- a/series.conf
+++ b/series.conf
@@ -15864,6 +15864,7 @@
 	patches.drivers/i40evf-0095-i40evf-Fix-function-header.patch
 	patches.drivers/i40evf-0096-i40e-i40evf-add-PPRS-bit-to-error-bits-and-fix-bug-i.patch
 	patches.drivers/i40evf-0097-i40e-i40evf-set-headwb-Tx-context-flags-and-use-them.patch
+	patches.drivers/i40evf-0098-i40e-i40evf-AdminQ-API-update-for-new-FW.patch
 
 	########################################################
 	# Wireless Networking
