i40e/i40evf: Add Flow director stats to PF stats (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15869,6 +15869,7 @@
 	patches.drivers/i40evf-0100-i40e-i40evf-User-ether_addr_copy-instead-of-memcpy.patch
 	patches.drivers/i40evf-0101-i40evf-check-admin-queue-error-bits.patch
 	patches.drivers/i40evf-0102-i40e-i40evf-remove-FTYPE.patch
+	patches.drivers/i40evf-0103-i40e-i40evf-Add-Flow-director-stats-to-PF-stats.patch
 
 	########################################################
 	# Wireless Networking
