i40evf: clean up init error messages (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15809,6 +15809,7 @@
 	patches.drivers/i40evf-0040-i40e-i40evf-reduce-context-descriptors.patch
 	patches.drivers/i40evf-0041-i40e-i40evf-Add-EEE-LPI-stats.patch
 	patches.drivers/i40evf-0042-i40evf-don-t-shut-down-admin-queue-on-error.patch
+	patches.drivers/i40evf-0043-i40evf-clean-up-init-error-messages.patch
 
 	########################################################
 	# Wireless Networking
