i40e/i40evf: modify debug prints to avoid seg faults (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15874,6 +15874,7 @@
 	patches.drivers/i40evf-0105-i40e-i40evf-Reset-Head-and-Tail-on-AQ-initialization.patch
 	patches.drivers/i40evf-0106-i40evf-fix-off-by-one.patch
 	patches.drivers/i40evf-0107-i40e-i40evf-Update-RSS-configuration.patch
+	patches.drivers/i40evf-0108-i40e-i40evf-modify-debug-prints-to-avoid-seg-faults.patch
 
 	########################################################
 	# Wireless Networking
