--- a/series.conf
+++ b/series.conf
@@ -15788,6 +15788,7 @@
 	patches.drivers/i40evf-0019-i40evf-request-reset-on-tx-hang.patch
 	patches.drivers/i40evf-0020-i40evf-remove-VLAN-filters-on-close.patch
 	patches.drivers/i40evf-0021-i40evf-fix-multiple-crashes-on-remove.patch
+	patches.drivers/i40evf-0022-i40evf-get-rid-of-pci_using_dac.patch
 
 	########################################################
 	# Wireless Networking
