--- a/series.conf
+++ b/series.conf
@@ -15778,6 +15778,7 @@
 	patches.drivers/i40evf-0009-i40evf-fix-s390-build-failure-due-to-implicit-prefet.patch
 	patches.drivers/i40evf-0010-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
 	patches.drivers/i40evf-0011-i40e-spelling-error.patch
+	patches.drivers/i40evf-0012-i40evf-trivial-fixes.patch
 
 	########################################################
 	# Wireless Networking
