i40evf: don't shut down admin queue on error (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15808,6 +15808,7 @@
 	patches.drivers/i40evf-0039-i40e-i40evf-enable-hardware-feature-head-write-back.patch
 	patches.drivers/i40evf-0040-i40e-i40evf-reduce-context-descriptors.patch
 	patches.drivers/i40evf-0041-i40e-i40evf-Add-EEE-LPI-stats.patch
+	patches.drivers/i40evf-0042-i40evf-don-t-shut-down-admin-queue-on-error.patch
 
 	########################################################
 	# Wireless Networking
