i40e/i40evf: Add EEE LPI stats (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15807,6 +15807,7 @@
 	patches.drivers/i40evf-0038-i40evf-use-min_t.patch
 	patches.drivers/i40evf-0039-i40e-i40evf-enable-hardware-feature-head-write-back.patch
 	patches.drivers/i40evf-0040-i40e-i40evf-reduce-context-descriptors.patch
+	patches.drivers/i40evf-0041-i40e-i40evf-Add-EEE-LPI-stats.patch
 
 	########################################################
 	# Wireless Networking
