--- a/series.conf
+++ b/series.conf
@@ -15858,6 +15858,7 @@
 	patches.drivers/i40evf-0089-i40evf-clean-up-log-message-formatting.patch
 	patches.drivers/i40evf-0090-i40evf-use-correct-format-for-printing-MAC-addresses.patch
 	patches.drivers/i40evf-0091-i40e-i40evf-remove-chatty-reset-messages.patch
+	patches.drivers/i40evf-0092-i40e-i40evf-fix-TSO-accounting.patch
 
 	########################################################
 	# Wireless Networking
