i40evf: invite vector 0 to the interrupt party (bsc#909486 FATE#317393).

--- a/series.conf
+++ b/series.conf
@@ -15890,6 +15890,7 @@
 	patches.drivers/i40evf-0121-i40e-i40evf-Do-not-free-the-dummy-packet-buffer-sync.patch
 	patches.drivers/i40evf-0122-i40evf-don-t-violate-scope.patch
 	patches.drivers/i40evf-0123-i40e-i40evf-Force-a-shifted-1-to-be-unsigned.patch
+	patches.drivers/i40evf-0124-i40evf-invite-vector-0-to-the-interrupt-party.patch
 
 	########################################################
 	# Wireless Networking
