--- a/series.conf
+++ b/series.conf
@@ -15776,6 +15776,7 @@
 	patches.drivers/i40evf-0007-i40evf-add-driver-to-kernel-build-system.patch
 	patches.drivers/i40evf-0008-i40evf-A0-silicon-specific.patch
 	patches.drivers/i40evf-0009-i40evf-fix-s390-build-failure-due-to-implicit-prefet.patch
+	patches.drivers/i40evf-0010-i40e-Fix-device-ID-define-names-to-align-to-standard.patch
 
 	########################################################
 	# Wireless Networking
