--- a/series.conf
+++ b/series.conf
@@ -15908,6 +15908,7 @@
 	patches.drivers/i40evf-0139-i40evf-Fixed-guest-OS-panic-when-removing-vf-driver.patch
 	patches.drivers/i40evf-0140-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/i40evf-0141-i40evf-Fix-TSO-and-hw-checksums-for-non-accelerated-.patch
+	patches.drivers/i40evf-0142-i40e-i40evf-add-max-buf-len-to-aq-debug-print-helper.patch
 
 	########################################################
 	# Wireless Networking
