sfc: Enable RX checksum offload for packets not handled by GRO (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15962,6 +15962,7 @@
 	patches.drivers/sfc-0033-sfc-Store-port-number-in-private-data-not-net_device.patch
 	patches.drivers/sfc-0034-sfc-Remove-write-permission-from-phy_type-attribute.patch
 	patches.drivers/sfc-0035-sfc-Fix-EEH-with-legacy-interrupts.patch
+	patches.drivers/sfc-0036-sfc-Enable-RX-checksum-offload-for-packets-not-handl.patch
 
 	########################################################
 	# Wireless Networking
