sfc: Update MCDI protocol definitions for EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15999,6 +15999,7 @@
 	patches.drivers/sfc-0070-sfc-Refactor-queue-teardown-sequence-to-allow-for-EF.patch
 	patches.drivers/sfc-0071-sfc-Move-and-rename-Falcon-Siena-common-NIC-operatio.patch
 	patches.drivers/sfc-0072-sfc-Translate-MCDI-error-numbers-received-in-events.patch
+	patches.drivers/sfc-0073-sfc-Update-MCDI-protocol-definitions-for-EF10.patch
 
 	########################################################
 	# Wireless Networking
