sfc: Extend struct efx_tx_buffer to allow pushing option descriptors (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16044,6 +16044,7 @@
 	patches.drivers/sfc-0115-sfc-Initialise-IRQ-moderation-for-all-NIC-types-from.patch
 	patches.drivers/sfc-0116-sfc-Prepare-for-RX-scatter-on-EF10.patch
 	patches.drivers/sfc-0117-sfc-Use-a-global-count-of-active-queues-instead-of-p.patch
+	patches.drivers/sfc-0118-sfc-Extend-struct-efx_tx_buffer-to-allow-pushing-opt.patch
 
 	########################################################
 	# Wireless Networking
