--- a/series.conf
+++ b/series.conf
@@ -16086,6 +16086,7 @@
 	patches.drivers/sfc-0157-sfc-PTP-Moderate-log-message-on-event-queue-overflow.patch
 	patches.drivers/sfc-0158-sfc-Rate-limit-log-message-for-PTP-packets-without-a.patch
 	patches.drivers/sfc-0159-sfc-Stop-re-start-PTP-when-stopping-starting-the-dat.patch
+	patches.drivers/sfc-0160-sfc-Maintain-current-frequency-adjustment-when-apply.patch
 
 	########################################################
 	# Wireless Networking
