sfc: Add length checks to efx_xmit_with_hwtstamp() and efx_ptp_is_ptp_tx() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16082,6 +16082,7 @@
 	patches.drivers/sfc-0153-sfc-Fix-DMA-unmapping-issue-with-firmware-assisted-T.patch
 	patches.drivers/sfc-0154-sfc-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 	patches.fixes/net-introduce-skb_transport_header_was_set.patch
+	patches.drivers/sfc-0156-sfc-Add-length-checks-to-efx_xmit_with_hwtstamp-and-.patch
 
 	########################################################
 	# Wireless Networking
