sfc: Correct comment about number of TX queues used on EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16144,6 +16144,7 @@
 	patches.drivers/sfc-0215-sfc-Rewrite-adjustment-of-PPS-event-in-a-clearer-way.patch
 	patches.drivers/sfc-0216-sfc-Replace-TSOH_OFFSET-with-the-equivalent-NET_IP_A.patch
 	patches.drivers/sfc-0217-sfc-Remove-unused-definitions-of-EF10-user-mode-DMA-.patch
+	patches.drivers/sfc-0218-sfc-Correct-comment-about-number-of-TX-queues-used-o.patch
 
 	########################################################
 	# Wireless Networking
