sfc: Add more information to many warnings using WARN() and netdev_WARN() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16122,6 +16122,7 @@
 	patches.drivers/sfc-0193-sfc-Enable-PTP-clock-and-timestamping-for-all-functi.patch
 	patches.drivers/sfc-0194-sfc-Don-t-clear-timestamps-in-efx_ptp_rx.patch
 	patches.drivers/sfc-0195-sfc-Remove-unnecessary-condition-for-processing-the-.patch
+	patches.drivers/sfc-0196-sfc-Add-more-information-to-many-warnings-using-WARN.patch
 
 	########################################################
 	# Wireless Networking
