sfc: Fix internal indices of ethtool stats for EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16074,6 +16074,7 @@
 	patches.drivers/sfc-0145-DMA-API-net-sfc-efx.c-replace-dma_set_mask-dma_set_c.patch
 	patches.drivers/sfc-0146-sfc-Remove-extern-from-function-prototypes.patch
 	patches.drivers/sfc-0147-sfc-Add-rmb-between-reading-stats-and-generation-cou.patch
+	patches.drivers/sfc-0148-sfc-Fix-internal-indices-of-ethtool-stats-for-EF10.patch
 
 	########################################################
 	# Wireless Networking
