--- a/series.conf
+++ b/series.conf
@@ -16154,6 +16154,7 @@
 	patches.drivers/sfc-0225-sfc-Add-remove-blank-lines-to-taste.patch
 	patches.drivers/sfc-0226-sfc-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
 	patches.drivers/sfc-0227-sfc-check-for-NULL-efx-ptp_data-in-efx_ptp_event.patch
+	patches.drivers/sfc-0228-sfc-Use-ether_addr_copy-and-eth_broadcast_addr.patch
 
 	########################################################
 	# Wireless Networking
