sfc: Revise sensor names to be more understandable and consistent (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16098,6 +16098,7 @@
 	patches.drivers/sfc-0169-sfc-Make-initial-fill-of-RX-descriptors-synchronous.patch
 	patches.drivers/sfc-0170-sfc-Correct-RX-dropped-count-for-drops-while-interfa.patch
 	patches.drivers/sfc-0171-sfc-Report-units-in-sensor-warnings.patch
+	patches.drivers/sfc-0172-sfc-Revise-sensor-names-to-be-more-understandable-an.patch
 
 	########################################################
 	# Wireless Networking
