sfc: fix return value check in efx_ptp_probe_channel() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15956,6 +15956,7 @@
 	patches.drivers/sfc-0027-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
 	patches.drivers/sfc-0028-sfc-make-local-functions-static.patch
 	patches.drivers/sfc-0029-sfc-Fix-Kconfig-typo-help.patch
+	patches.drivers/sfc-0030-sfc-fix-return-value-check-in-efx_ptp_probe_channel.patch
 
 	########################################################
 	# Wireless Networking
