sfc: Stop/re-start PTP when stopping/starting the datapath (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16085,6 +16085,7 @@
 	patches.drivers/sfc-0156-sfc-Add-length-checks-to-efx_xmit_with_hwtstamp-and-.patch
 	patches.drivers/sfc-0157-sfc-PTP-Moderate-log-message-on-event-queue-overflow.patch
 	patches.drivers/sfc-0158-sfc-Rate-limit-log-message-for-PTP-packets-without-a.patch
+	patches.drivers/sfc-0159-sfc-Stop-re-start-PTP-when-stopping-starting-the-dat.patch
 
 	########################################################
 	# Wireless Networking
