--- a/series.conf
+++ b/series.conf
@@ -15981,6 +15981,7 @@
 	patches.drivers/sfc-0052-sfc-Fill-out-the-set-of-MCDI-accessors.patch
 	patches.drivers/sfc-0053-sfc-Introduce-and-use-MCDI_CTL_SDU_LEN_MAX_V1-macro-.patch
 	patches.drivers/sfc-0054-sfc-Use-proper-macros-to-declare-and-access-MCDI-arr.patch
+	patches.drivers/sfc-0055-sfc-Ensure-MCDI-buffers-but-not-lengths-are-dword-al.patch
 
 	########################################################
 	# Wireless Networking
