sfc: Use proper macros to declare and access MCDI arrays (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15980,6 +15980,7 @@
 	patches.drivers/sfc-0051-sfc-Rationalise-MCDI-buffer-accessors.patch
 	patches.drivers/sfc-0052-sfc-Fill-out-the-set-of-MCDI-accessors.patch
 	patches.drivers/sfc-0053-sfc-Introduce-and-use-MCDI_CTL_SDU_LEN_MAX_V1-macro-.patch
+	patches.drivers/sfc-0054-sfc-Use-proper-macros-to-declare-and-access-MCDI-arr.patch
 
 	########################################################
 	# Wireless Networking
