--- a/series.conf
+++ b/series.conf
@@ -15987,6 +15987,7 @@
 	patches.drivers/sfc-0058-sfc-Move-efx_mcdi_mac_reconfigure-to-siena.c-and-ren.patch
 	patches.drivers/sfc-0059-sfc-Collect-all-MCDI-port-functions-into-mcdi_port.c.patch
 	patches.drivers/sfc-0060-sfc-Make-efx_mcdi_init-call-efx_mcdi_handle_assertio.patch
+	patches.drivers/sfc-0061-sfc-Make-MCDI-independent-of-Siena.patch
 
 	########################################################
 	# Wireless Networking
