--- a/series.conf
+++ b/series.conf
@@ -16072,6 +16072,7 @@
 	patches.drivers/sfc-0143-sfc-Use-TX-PIO-for-sufficiently-small-packets.patch
 	patches.drivers/sfc-0144-sfc-Support-ARFS-for-IPv6-flows.patch
 	patches.drivers/sfc-0145-DMA-API-net-sfc-efx.c-replace-dma_set_mask-dma_set_c.patch
+	patches.drivers/sfc-0146-sfc-Remove-extern-from-function-prototypes.patch
 
 	########################################################
 	# Wireless Networking
