--- a/series.conf
+++ b/series.conf
@@ -16100,6 +16100,7 @@
 	patches.drivers/sfc-0171-sfc-Report-units-in-sensor-warnings.patch
 	patches.drivers/sfc-0172-sfc-Revise-sensor-names-to-be-more-understandable-an.patch
 	patches.drivers/sfc-0173-sfc-Add-new-sensor-names.patch
+	patches.drivers/sfc-0174-sfc-Log-all-unexpected-MCDI-errors.patch
 
 	########################################################
 	# Wireless Networking
