sfc: Remove driver-local struct ethtool_string (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16022,6 +16022,7 @@
 	patches.drivers/sfc-0093-sfc-Move-NIC-type-specific-MTD-partition-date-into-s.patch
 	patches.drivers/sfc-0094-sfc-Move-MTD-operations-into-efx_nic_type.patch
 	patches.drivers/sfc-0095-sfc-Remove-more-left-overs-from-Falcon-GMAC-support.patch
+	patches.drivers/sfc-0096-sfc-Remove-driver-local-struct-ethtool_string.patch
 
 	########################################################
 	# Wireless Networking
