sfc: split setup of hardware timestamping into NIC-type operation (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16114,6 +16114,7 @@
 	patches.drivers/sfc-0185-sfc-PTP-tidy-up-unused-useless-variables.patch
 	patches.drivers/sfc-0186-sfc-Tidy-up-PTP-synchronization-code.patch
 	patches.drivers/sfc-0187-sfc-Add-support-for-SFC9100-timestamp-format.patch
+	patches.drivers/sfc-0188-sfc-split-setup-of-hardware-timestamping-into-NIC-ty.patch
 
 	########################################################
 	# Wireless Networking
