sfc: Split Falcon-arch-specific and common filter state (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16010,6 +16010,7 @@
 	patches.drivers/sfc-0081-sfc-Rename-Falcon-arch-filter-implementation-types-a.patch
 	patches.drivers/sfc-0082-sfc-Name-the-RX-drop-queue-ID.patch
 	patches.drivers/sfc-0083-sfc-Extend-and-abstract-efx_filter_spec-to-cover-Hun.patch
+	patches.drivers/sfc-0084-sfc-Split-Falcon-arch-specific-and-common-filter-sta.patch
 
 	########################################################
 	# Wireless Networking
