--- a/series.conf
+++ b/series.conf
@@ -16064,6 +16064,7 @@
 	patches.drivers/sfc-0135-sfc-efx_ethtool_get_ts_info-can-be-static.patch
 	patches.drivers/sfc-0136-sfc-efx_ef10_filter_update_rx_scatter-can-be-static.patch
 	patches.drivers/sfc-0137-sfc-Add-EF10-registers-to-register-dump.patch
+	patches.drivers/sfc-0138-sfc-Fold-tso_get_head_fragment-into-tso_start.patch
 
 	########################################################
 	# Wireless Networking
