sfc: Change efx_nic_type::rx_push_indir_table to push hash key as well (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16123,6 +16123,7 @@
 	patches.drivers/sfc-0194-sfc-Don-t-clear-timestamps-in-efx_ptp_rx.patch
 	patches.drivers/sfc-0195-sfc-Remove-unnecessary-condition-for-processing-the-.patch
 	patches.drivers/sfc-0196-sfc-Add-more-information-to-many-warnings-using-WARN.patch
+	patches.drivers/sfc-0197-sfc-Change-efx_nic_type-rx_push_indir_table-to-push-.patch
 
 	########################################################
 	# Wireless Networking
