--- a/series.conf
+++ b/series.conf
@@ -16013,6 +16013,7 @@
 	patches.drivers/sfc-0084-sfc-Split-Falcon-arch-specific-and-common-filter-sta.patch
 	patches.drivers/sfc-0085-sfc-Refactor-Falcon-arch-search-limit-reset.patch
 	patches.drivers/sfc-0086-sfc-Make-most-filter-operations-NIC-type-specific.patch
+	patches.drivers/sfc-0087-sfc-Refactor-Falcon-arch-filter-removal.patch
 
 	########################################################
 	# Wireless Networking
