sfc: Fix transposed ptp_{under, over}size_sync_windows statistics (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16136,6 +16136,7 @@
 	patches.drivers/sfc-0207-net-sfc-calls-skb_set_hash.patch
 	patches.drivers/sfc-0208-sfc-fix-sparse-non-static-symbol-warning.patch
 	patches.drivers/sfc-0209-sfc-Change-efx_mcdi_reset_port-to-use-ENTITY_RESET-M.patch
+	patches.drivers/sfc-0210-sfc-Fix-transposed-ptp_-under-over-size_sync_windows.patch
 
 	########################################################
 	# Wireless Networking
