--- a/series.conf
+++ b/series.conf
@@ -16140,6 +16140,7 @@
 	patches.drivers/sfc-0211-sfc-Use-the-correct-maximum-TX-DMA-ring-size-for-SFC.patch
 	patches.drivers/sfc-0212-drivers-net-fix-build-warning-in-ethernet-sfc-tx.c.patch
 	patches.drivers/sfc-0213-sfc-Removed-adhoc-scheme-to-rate-limit-PTP-event-que.patch
+	patches.drivers/sfc-0214-sfc-Cache-skb-data-in-local-variable-in-efx_ptp_rx.patch
 
 	########################################################
 	# Wireless Networking
