--- a/series.conf
+++ b/series.conf
@@ -16121,6 +16121,7 @@
 	patches.drivers/sfc-0192-sfc-Associate-primary-and-secondary-functions-of-con.patch
 	patches.drivers/sfc-0193-sfc-Enable-PTP-clock-and-timestamping-for-all-functi.patch
 	patches.drivers/sfc-0194-sfc-Don-t-clear-timestamps-in-efx_ptp_rx.patch
+	patches.drivers/sfc-0195-sfc-Remove-unnecessary-condition-for-processing-the-.patch
 
 	########################################################
 	# Wireless Networking
