sfc: Add new sensor names (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16099,6 +16099,7 @@
 	patches.drivers/sfc-0170-sfc-Correct-RX-dropped-count-for-drops-while-interfa.patch
 	patches.drivers/sfc-0171-sfc-Report-units-in-sensor-warnings.patch
 	patches.drivers/sfc-0172-sfc-Revise-sensor-names-to-be-more-understandable-an.patch
+	patches.drivers/sfc-0173-sfc-Add-new-sensor-names.patch
 
 	########################################################
 	# Wireless Networking
