--- a/series.conf
+++ b/series.conf
@@ -16124,6 +16124,7 @@
 	patches.drivers/sfc-0195-sfc-Remove-unnecessary-condition-for-processing-the-.patch
 	patches.drivers/sfc-0196-sfc-Add-more-information-to-many-warnings-using-WARN.patch
 	patches.drivers/sfc-0197-sfc-Change-efx_nic_type-rx_push_indir_table-to-push-.patch
+	patches.drivers/sfc-0198-sfc-Change-priority-and-flags-for-automatic-MAC-filt.patch
 
 	########################################################
 	# Wireless Networking
