--- a/series.conf
+++ b/series.conf
@@ -16128,6 +16128,7 @@
 	patches.drivers/sfc-0199-sfc-Don-t-refer-to-stack-in-filter-implementation.patch
 	patches.drivers/sfc-0200-sfc-Allow-filter-removal-only-with-exactly-matching-.patch
 	patches.drivers/sfc-0201-sfc-Implement-efx_nic_type-filter_clear_rx-operation.patch
+	patches.drivers/sfc-0202-sfc-remove-unused-refcnt-from-efx_rx_page_state.patch
 
 	########################################################
 	# Wireless Networking
