sfc: EFX_WORKAROUND_ALWAYS is really specific to Falcon-architecture (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16004,6 +16004,7 @@
 	patches.drivers/sfc-0075-sfc-Fix-race-in-completion-handling.patch
 	patches.drivers/sfc-0076-sfc-Update-and-improve-kernel-doc-for-efx_mcdi_state.patch
 	patches.drivers/sfc-0077-sfc-Get-rid-of-per-NIC-type-phys_addr_channels-and-m.patch
+	patches.drivers/sfc-0078-sfc-EFX_WORKAROUND_ALWAYS-is-really-specific-to-Falc.patch
 
 	########################################################
 	# Wireless Networking
