--- a/series.conf
+++ b/series.conf
@@ -16069,6 +16069,7 @@
 	patches.drivers/sfc-0140-sfc-Allocate-and-link-PIO-buffers-map-them-with-writ.patch
 	patches.drivers/sfc-0141-sfc-Separate-out-queue-empty-check-from-efx_nic_may_.patch
 	patches.drivers/sfc-0142-sfc-Introduce-inline-functions-to-simplify-TX-insert.patch
+	patches.drivers/sfc-0143-sfc-Use-TX-PIO-for-sufficiently-small-packets.patch
 
 	########################################################
 	# Wireless Networking
