--- a/series.conf
+++ b/series.conf
@@ -15934,6 +15934,7 @@
 	patches.drivers/sfc-0005-sfc-tidy-up-PTP-synchronize-function-efx_ptp_process.patch
 	patches.drivers/sfc-0006-sfc-Remove-rx_alloc_method-SKB.patch
 	patches.drivers/sfc-0007-sfc-More-sensible-semantics-for-efx_filter_insert_fi.patch
+	patches.drivers/sfc-0008-sfc-Remove-redundant-parameter-to-efx_filter_search.patch
 
 	########################################################
 	# Wireless Networking
