--- a/series.conf
+++ b/series.conf
@@ -16029,6 +16029,7 @@
 	patches.drivers/sfc-0100-sfc-Add-EF10-support-for-TX-RX-DMA-error-events-hand.patch
 	patches.drivers/sfc-0101-sfc-use-MCDI-epoch-flag-to-improve-MC-reboot-detecti.patch
 	patches.drivers/sfc-0102-sfc-Remove-early-call-to-efx_nic_type-reconfigure_ma.patch
+	patches.drivers/sfc-0103-sfc-Rename-EFX_PAGE_BLOCK_SIZE-to-EFX_VI_PAGE_SIZE-a.patch
 
 	########################################################
 	# Wireless Networking
