sfc: Delete EFX_PAGE_IP_ALIGN, equivalent to NET_IP_ALIGN (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15957,6 +15957,7 @@
 	patches.drivers/sfc-0028-sfc-make-local-functions-static.patch
 	patches.drivers/sfc-0029-sfc-Fix-Kconfig-typo-help.patch
 	patches.drivers/sfc-0030-sfc-fix-return-value-check-in-efx_ptp_probe_channel.patch
+	patches.drivers/sfc-0031-sfc-Delete-EFX_PAGE_IP_ALIGN-equivalent-to-NET_IP_AL.patch
 
 	########################################################
 	# Wireless Networking
