sfc: Delegate MAC/NIC statistic description to efx_nic_type (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16023,6 +16023,7 @@
 	patches.drivers/sfc-0094-sfc-Move-MTD-operations-into-efx_nic_type.patch
 	patches.drivers/sfc-0095-sfc-Remove-more-left-overs-from-Falcon-GMAC-support.patch
 	patches.drivers/sfc-0096-sfc-Remove-driver-local-struct-ethtool_string.patch
+	patches.drivers/sfc-0097-sfc-Delegate-MAC-NIC-statistic-description-to-efx_ni.patch
 
 	########################################################
 	# Wireless Networking
