--- a/series.conf
+++ b/series.conf
@@ -16115,6 +16115,7 @@
 	patches.drivers/sfc-0186-sfc-Tidy-up-PTP-synchronization-code.patch
 	patches.drivers/sfc-0187-sfc-Add-support-for-SFC9100-timestamp-format.patch
 	patches.drivers/sfc-0188-sfc-split-setup-of-hardware-timestamping-into-NIC-ty.patch
+	patches.drivers/sfc-0189-sfc-Copy-RX-prefix-into-skb-head-area-in-efx_rx_mk_s.patch
 
 	########################################################
 	# Wireless Networking
