sfc: fix sparse non static symbol warning (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16134,6 +16134,7 @@
 	patches.drivers/sfc-0205-sfc-Add-PTP-counters-to-ethtool-stats.patch
 	patches.drivers/sfc-0206-sfc-Fix-RX-drop-filters-for-EF10.patch
 	patches.drivers/sfc-0207-net-sfc-calls-skb_set_hash.patch
+	patches.drivers/sfc-0208-sfc-fix-sparse-non-static-symbol-warning.patch
 
 	########################################################
 	# Wireless Networking
