--- a/series.conf
+++ b/series.conf
@@ -15951,6 +15951,7 @@
 	patches.drivers/sfc-0022-drivers-net-Add-moduleparam.h-to-drivers-as-required.patch
 	patches.drivers/sfc-0023-sfc-reuse-pages-to-avoid-DMA-mapping-unmapping-costs.patch
 	patches.drivers/sfc-0024-sfc-Replace-efx_rx_is_last_buffer-with-a-flag.patch
+	patches.drivers/sfc-0025-sfc-allocate-more-RX-buffers-per-page.patch
 
 	########################################################
 	# Wireless Networking
