--- a/series.conf
+++ b/series.conf
@@ -16038,6 +16038,7 @@
 	patches.drivers/sfc-0109-sfc-Refactor-efx_mcdi_rpc_start-and-efx_mcdi_copyin.patch
 	patches.drivers/sfc-0110-sfc-Remove-unnecessary-use-of-atomic_t.patch
 	patches.drivers/sfc-0111-sfc-Implement-asynchronous-MCDI-requests.patch
+	patches.drivers/sfc-0112-sfc-Document-conditions-for-multicast-replication-vs.patch
 
 	########################################################
 	# Wireless Networking
