sfc: Tidy up PTP synchronization code (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16112,6 +16112,7 @@
 	patches.drivers/sfc-0183-sfc-Initialise-efx_ptp_data-phc_clock_info-from-a-st.patch
 	patches.drivers/sfc-0184-sfc-Remove-kernel-doc-for-efx_ptp_data-fields-not-pr.patch
 	patches.drivers/sfc-0185-sfc-PTP-tidy-up-unused-useless-variables.patch
+	patches.drivers/sfc-0186-sfc-Tidy-up-PTP-synchronization-code.patch
 
 	########################################################
 	# Wireless Networking
