--- a/series.conf
+++ b/series.conf
@@ -16166,6 +16166,7 @@
 	patches.drivers/sfc-0237-sfc-add-extra-RX-drop-counters-for-nodesc_trunc-and-.patch
 	patches.drivers/sfc-0238-sfc-Add-per-queue-statistics-in-ethtool.patch
 	patches.drivers/sfc-0239-sfc-Use-__iowrite64_copy-instead-of-a-slightly-diffe.patch
+	patches.drivers/sfc-0240-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
