sfc: Allow efx_nic_type::dimension_resources to fail (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16040,6 +16040,7 @@
 	patches.drivers/sfc-0111-sfc-Implement-asynchronous-MCDI-requests.patch
 	patches.drivers/sfc-0112-sfc-Document-conditions-for-multicast-replication-vs.patch
 	patches.drivers/sfc-0113-sfc-Allow-event-queue-initialisation-to-fail.patch
+	patches.drivers/sfc-0114-sfc-Allow-efx_nic_type-dimension_resources-to-fail.patch
 
 	########################################################
 	# Wireless Networking
