--- a/series.conf
+++ b/series.conf
@@ -15930,6 +15930,7 @@
 	patches.drivers/sfc-0001-drivers-net-ethernet-sfc-use-standard-__-clear-set-_.patch
 	patches.drivers/sfc-0002-sfc-remove-__dev-attributes.patch
 	patches.drivers/sfc-0003-sfc-Allow-efx_channel_type-receive_skb-to-reject-a-p.patch
+	patches.drivers/sfc-0004-sfc-PTP-changes-to-support-improved-UUID-filtering-m.patch
 
 	########################################################
 	# Wireless Networking
