sfc: Add PM and RXDP drop counters to ethtool stats (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16077,6 +16077,7 @@
 	patches.drivers/sfc-0148-sfc-Fix-internal-indices-of-ethtool-stats-for-EF10.patch
 	patches.drivers/sfc-0149-sfc-Refactor-EF10-stat-mask-code-to-allow-for-more-c.patch
 	patches.drivers/sfc-0150-sfc-Add-definitions-for-new-stats-counters-and-capab.patch
+	patches.drivers/sfc-0151-sfc-Add-PM-and-RXDP-drop-counters-to-ethtool-stats.patch
 
 	########################################################
 	# Wireless Networking
