--- a/series.conf
+++ b/series.conf
@@ -15948,6 +15948,7 @@
 	patches.drivers/sfc-0019-sfc-Explicitly-prefetch-RX-hash-prefix-not-just-Ethe.patch
 	patches.drivers/sfc-0020-sfc-Update-RX-buffer-address-together-with-length.patch
 	patches.drivers/sfc-0021-sfc-Enable-RX-DMA-scattering-where-possible.patch
+	patches.drivers/sfc-0022-drivers-net-Add-moduleparam.h-to-drivers-as-required.patch
 
 	########################################################
 	# Wireless Networking
