sfc: Do not use MAC address as clock name (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16108,6 +16108,7 @@
 	patches.drivers/sfc-0179-sfc-Split-PTP-multicast-filter-insertion-removal-out.patch
 	patches.drivers/sfc-0180-sfc-Remove-dependency-of-PTP-on-having-a-dedicated-c.patch
 	patches.drivers/sfc-0181-sfc-Store-flags-from-MC_CMD_DRV_ATTACH-for-later-use.patch
+	patches.drivers/sfc-0182-sfc-Do-not-use-MAC-address-as-clock-name.patch
 
 	########################################################
 	# Wireless Networking
