--- a/series.conf
+++ b/series.conf
@@ -16095,6 +16095,7 @@
 	patches.drivers/sfc-0166-net-sfc-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/sfc-0167-sfc-Add-MC-BISTs-to-ethtool-offline-self-test-on-EF1.patch
 	patches.drivers/sfc-0168-sfc-Tighten-the-check-for-RX-merged-completion-event.patch
+	patches.drivers/sfc-0169-sfc-Make-initial-fill-of-RX-descriptors-synchronous.patch
 
 	########################################################
 	# Wireless Networking
