--- a/series.conf
+++ b/series.conf
@@ -16062,6 +16062,7 @@
 	patches.drivers/sfc-0133-sfc-Wait-for-MC-reboot-to-complete-before-scheduling.patch
 	patches.drivers/sfc-0134-sfc-Increase-MCDI-status-timeout-to-250ms.patch
 	patches.drivers/sfc-0135-sfc-efx_ethtool_get_ts_info-can-be-static.patch
+	patches.drivers/sfc-0136-sfc-efx_ef10_filter_update_rx_scatter-can-be-static.patch
 
 	########################################################
 	# Wireless Networking
