--- a/series.conf
+++ b/series.conf
@@ -16001,6 +16001,7 @@
 	patches.drivers/sfc-0072-sfc-Translate-MCDI-error-numbers-received-in-events.patch
 	patches.drivers/sfc-0073-sfc-Update-MCDI-protocol-definitions-for-EF10.patch
 	patches.drivers/sfc-0074-sfc-Add-support-for-MCDI-v2.patch
+	patches.drivers/sfc-0075-sfc-Fix-race-in-completion-handling.patch
 
 	########################################################
 	# Wireless Networking
