sfc: Don't receive packets when the napi budget == 0 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16155,6 +16155,7 @@
 	patches.drivers/sfc-0226-sfc-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
 	patches.drivers/sfc-0227-sfc-check-for-NULL-efx-ptp_data-in-efx_ptp_event.patch
 	patches.drivers/sfc-0228-sfc-Use-ether_addr_copy-and-eth_broadcast_addr.patch
+	patches.drivers/sfc-0229-sfc-Don-t-receive-packets-when-the-napi-budget-0.patch
 
 	########################################################
 	# Wireless Networking
