--- a/series.conf
+++ b/series.conf
@@ -16105,6 +16105,7 @@
 	patches.drivers/sfc-0176-sfc-Fold-efx_flush_all-into-efx_stop_port-and-update.patch
 	patches.drivers/sfc-0177-sfc-Expose-NVRAM_PARTITION_TYPE_LICENSE-on-EF10.patch
 	patches.drivers/sfc-0178-sfc-Return-EBUSY-for-filter-insertion-on-EF10-matchi.patch
+	patches.drivers/sfc-0179-sfc-Split-PTP-multicast-filter-insertion-removal-out.patch
 
 	########################################################
 	# Wireless Networking
