--- a/series.conf
+++ b/series.conf
@@ -15991,6 +15991,7 @@
 	patches.drivers/sfc-0062-sfc-Add-GFP-flags-to-efx_nic_alloc_buffer-and-make-m.patch
 	patches.drivers/sfc-0063-sfc-Make-struct-efx_special_buffer-less-special.patch
 	patches.drivers/sfc-0064-sfc-Rename-Falcon-architecture-register-definitions.patch
+	patches.drivers/sfc-0065-sfc-Remove-efx_process_channel_now.patch
 
 	########################################################
 	# Wireless Networking
