--- a/series.conf
+++ b/series.conf
@@ -16104,6 +16104,7 @@
 	patches.drivers/sfc-0175-sfc-Map-MCDI-error-MC_CMD_ERR_ENOTSUP-to-Linux-EOPNO.patch
 	patches.drivers/sfc-0176-sfc-Fold-efx_flush_all-into-efx_stop_port-and-update.patch
 	patches.drivers/sfc-0177-sfc-Expose-NVRAM_PARTITION_TYPE_LICENSE-on-EF10.patch
+	patches.drivers/sfc-0178-sfc-Return-EBUSY-for-filter-insertion-on-EF10-matchi.patch
 
 	########################################################
 	# Wireless Networking
